--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-macos": "*"
   },
   "workspaces": [
     "example"
@@ -185,11 +186,6 @@
     "type": "all",
     "jsSrcsDir": "src",
     "outputDir": {
-      "ios": "ios/generated",
-      "android": "android/generated"
-    },
-    "android": {
-      "javaPackageName": "com.closebutton"
     }
   },
   "create-react-native-library": {
